# HasPro-webapp

./: .gitignore  build.sh  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml  readme.md
docker/: helper_node  helper_python  production
haspro/: manage.py
haspro/haspro_app/: admin.py  models.py  urls.py  views.py
haspro/haspro_app/forms/: building_form.py  buildingmanager_form.py  feplacement_form.py  fireestinguisher_form.py  owner_form.py  utils.py
haspro/haspro_app/static/: ishas_icon.xcf
haspro/haspro_app/static/css/: haspro.css  user_management.css
haspro/haspro_app/static/js/: haspro.js
haspro/haspro_app/templates/: 403.html  404.html  500.html  base.html  base_error.html  base_form.html  home.html  messages.html
haspro/haspro_app/templates/building/: building_form.html  building_list.html
haspro/haspro_app/templates/buildingmanager/: buildingmanager_form.html  buildingmanager_list.html
haspro/haspro_app/templates/buildingowner/: buildingowner_form.html  buildingowner_list.html
haspro/haspro_app/templates/cookie_consent/: banner.html
haspro/haspro_app/templates/firedistinguisher/: firedistinguisher_form.html  firedistinguisher_list.html
haspro/haspro_app/templates/imports/: import.html
haspro/haspro_app/templatetags/: global_tags.py
haspro/haspro_app/utils/: add_inspection.py  db_dump.py  imports.py
haspro/haspro_project/: asgi.py  settings.py  urls.py  wsgi.py
haspro/users/: admin.py  allauth.py  models.py  utils.py
scripts/: minify_templates.py
test/scripts/: get_db_dump.py  login.py
(+26 files in other folders)
