[project]
name = "HasPro-webapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.6",
    "django-allauth>=65.11.1",
    "django-cookie-consent>=0.8.0",
    "fido2>=2.0.0",
    "jwt>=1.4.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "requests>=2.32.5",
]
